springsql-k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: postgres
  namespace: testfinal
spec:
  type: ClusterIP
  ports:
  - name: postgres-service
    port: 5432
    targetPort: 5432
  selector:
    app: db
