springsql-k8s/restapp-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springsql
  name: springsql
  namespace: testfinal
spec:
  type: NodePort
  ports:
     - port: 8080
  selector:
    app: springsql
